# clnrm

./: "name":"qwen3-coder:30b"  .cursorrules  .gitignore  AUTONOMIC_AI_IMPLEMENTATION_FLOW.puml  AUTONOMIC_HYPER_INTELLIGENCE_ARCHITECTURE.puml  AUTONOMIC_HYPER_INTELLIGENCE_IMPLEMENTATION_COMPLETE.md  AUTONOMIC_HYPER_INTELLIGENCE_README.md  AUTONOMIC_HYPER_INTELLIGENCE_THESIS.md  CHANGELOG-v0.6.0.md  CHANGELOG.md  CLAUDE.md  CLI_ISSUES_ANALYSIS.md  CLI_TEMPLATE_INTEGRATION_COMPLETE.md  CODEBASE_QUALITY_ANALYSIS.md  COMPLIANCE_STATUS.md  CONSOLIDATION_SUMMARY.md  Cargo.toml  Cargo.workspace.toml  DOGFOOD_INNOVATIONS_COMPLETE.md  DOGFOOD_INNOVATIONS_README.md  Dockerfile  Dockerfile.clnrm-self-test  FALSE_POSITIVES_IDENTIFIED.md  FALSE_README.md  GAPS_FIXED.md  HYPER_DIMENSIONAL_INFORMATION_THEORY_CALCULUS_PHD_THESIS.md  IMPLEMENTATION_GAPS_AND_FALSE_POSITIVES.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  JUNIOR_DEV_TEST_REPORT.md  LOOP_NEAR_CLOSURE.txt  Makefile.toml  Makefile.toml.full  OPENTELEMETRY_EVALUATION_REPORT.md  OPEN_TELEMETRY_DIAGRAMS.md  OPEN_TELEMETRY_IMPLEMENTATION_SUMMARY.md  OPEN_TELEMETRY_INTEGRATION_ARCHITECTURE.md  OTEL-PRD.md  OTEL_VALIDATION_STATUS.md  PRD-v1.md  (+37 more)
crates/clap-noun-verb/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/clap-noun-verb/examples/: basic.rs  collector.rs  framework.rs  nested.rs  services.rs
crates/clap-noun-verb/src/: builder.rs  error.rs  lib.rs  macros.rs  noun.rs  registry.rs  router.rs  tree.rs  verb.rs
crates/clap-noun-verb/tests/: integration.rs  unit.rs
crates/clnrm/: Cargo.toml
crates/clnrm-ai/: Cargo.toml  README.md
crates/clnrm-ai/src/: lib.rs
crates/clnrm-ai/src/commands/: ai_monitor.rs  ai_optimize.rs  ai_orchestrate.rs  ai_predict.rs  ai_real.rs  mod.rs
crates/clnrm-ai/src/services/: ai_intelligence.rs  ai_test_generator.rs  mod.rs
crates/clnrm-core/: Cargo.toml  framework-test-report.json
crates/clnrm-core/examples/: cli_usage.sh  container_reuse_benchmark.rs  jane_friendly_test.rs  observability-self-validation.rs  security-compliance-validation.rs  simple-echo.clnrm.toml  simple_jane_test.rs  simple_test.rs  surrealdb-ollama-integration.rs
crates/clnrm-core/examples/config/: config-loading-test.rs
crates/clnrm-core/examples/framework-self-testing/: complete-dogfooding-suite.rs  container-lifecycle-test.rs  innovative-dogfood-test.rs
crates/clnrm-core/examples/innovations/: ai-powered-test-optimizer.rs  distributed-testing-orchestrator.rs  framework-documentation-validator.rs  framework-stress-test.rs  meta-testing-framework.rs  simple-framework-stress-demo.rs
crates/clnrm-core/examples/observability/: observability-demo.rs  observability-self-test.rs  otel_graph_validation.rs
crates/clnrm-core/examples/performance/: container-reuse-benchmark.rs
crates/clnrm-core/examples/plugins/: custom-plugin-demo.rs  plugin-self-test.rs
crates/clnrm-core/examples/toml-configuration/: validate-toml-format.rs
crates/clnrm-core/src/: assertions.rs  cleanroom.rs  cli.rs  config.rs  error.rs  lib.rs  macros.rs  policy.rs  scenario.rs  telemetry.rs  testing.rs  utils.rs
crates/clnrm-core/src/backend/: capabilities.rs  mock.rs  mod.rs  testcontainer.rs  volume.rs
crates/clnrm-core/src/cache/: file_cache.rs  hash.rs  memory_cache.rs
crates/clnrm-core/src/cli/: mod.rs  noun_verb_integration.rs  telemetry.rs  test_noun_verb.rs  types.rs  utils.rs
crates/clnrm-core/src/config/: deserializers.rs  loader.rs  mod.rs  otel.rs  project.rs  services.rs  types.rs
crates/clnrm-core/src/coverage/: manifest.rs  mod.rs  report.rs  tracker.rs
crates/clnrm-core/src/determinism/: digest.rs  mod.rs  rng.rs  time.rs
crates/clnrm-core/src/formatting/: formatter.rs  human.rs  json.rs  junit.rs  mod.rs  tap.rs  test_result.rs  toml_fmt.rs
crates/clnrm-core/src/marketplace/: commands.rs  community.rs  discovery.rs  metadata.rs  mod.rs  package.rs  registry.rs  security.rs
crates/clnrm-core/src/otel/: mod.rs  stdout_parser.rs
crates/clnrm-core/src/reporting/: digest.rs  json.rs  junit.rs  mod.rs
crates/clnrm-core/src/scenario/: artifacts.rs
crates/clnrm-core/src/services/: ai_intelligence.rs  ai_test_generator.rs  chaos_engine.rs  elasticsearch.rs  factory.rs  generic.rs  mod.rs  nginx.rs  ollama.rs  otel_collector.rs  postgres.rs  readiness.rs  redis.rs  (+4 more)
crates/clnrm-core/tests/: cache_comprehensive_test.rs  cache_integration.rs  cli_essentials.rs  core_unit.rs  critical_integration.rs  determinism_test.rs  determinism_validation.rs  enhanced_shape_validation.rs  env_variable_resolution_test.rs  error_handling.rs  example_using_common_helpers.rs  fake_green_detection_case_study.rs  formatting_tests.rs  hermeticity_validation_test.rs  homebrew_validation.rs  integration_ai_commands.rs  integration_ai_commands.rs.disabled  integration_otel.rs  integration_otel_traces.rs  integration_otel_validation.rs.disabled  integration_record.rs  integration_stdout_exporter.rs  integration_stdout_parser.rs  integration_surrealdb.rs  integration_testcontainer.rs  integration_v0_6_0_validation.rs  integration_volume.rs.disabled  otel_validation.rs  otel_validation_integration.rs  prd_v1_compliance.rs  prd_validation_test.rs  property_tests.rs  readme_test.rs  red_team_attack_vectors.rs  redteam_otlp_integration.rs  redteam_otlp_validation.rs  report_generation.rs  service_lifecycle.rs  service_plugin_test.rs  shape_validation_tests.rs  (+16 more)
crates/clnrm-shared/: Cargo.toml
crates/clnrm-shared/src/: lib.rs
crates/clnrm-template/: Cargo.toml
crates/clnrm-template/src/: _macros.toml.tera  async.rs  builder.rs  cache.rs  context.rs  custom.rs  debug.rs  determinism.rs  discovery.rs  error.rs  integration.rs  lib.rs  renderer.rs  simple.rs  toml.rs  validation.rs
crates/clnrm/src/: bin.rs  lib.rs  main.rs
crates/clnrm/tests/: CLI_TEST_REPORT.md  cli_integration.rs
tests/fuzz/: Cargo.toml  README.md  crash_reproduction_tests.rs  run_local_fuzz.sh
tests/fuzz/fuzz_targets/: fuzz_cli_args.rs  fuzz_error_handling.rs  fuzz_regex_patterns.rs  fuzz_scenario_dsl.rs  fuzz_toml_parser.rs
(+1437 files in other folders)
