[workspace]
resolver = "2"

members = ["crates/clnrm", "crates/clnrm-core", "crates/clnrm-shared", "crates/clnrm-ai"]

# Default members exclude experimental AI crate
# Use `cargo test -p clnrm-ai` to test AI features separately
default-members = ["crates/clnrm", "crates/clnrm-core", "crates/clnrm-shared"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Sean Chatman <seanchatmangpt@gmail.com>"]
repository = "https://github.com/seanchatmangpt/clnrm"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Container dependencies
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["surrealdb"] }
futures-util = "0.3"
surrealdb = "2.2"

# CLI dependencies
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
toml = "0.9"
regex = "1.0"
walkdir = "2.5"
tempfile = "3.0"
junit-report = "0.8"
notify = "6.0"

# OpenTelemetry dependencies
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
  "metrics",
  "logs",
] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
  "trace",
  "metrics",
  "logs",
  "rt-tokio",
] }
opentelemetry-stdout = { version = "0.31", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
  "trace",
  "metrics",
  "logs",
  "http-proto",
  "grpc-tonic",
  "reqwest-client",
] }
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.20", features = [
  "fmt",
  "env-filter",
  "registry",
] }

# Utility dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Snapshot testing dependencies
insta = { version = "1.34", features = ["json", "yaml"] }

# Benchmarking dependencies
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

