[package]
name = "clap-noun-verb"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sean Chatman <seanchatmangpt@gmail.com>"]
repository = "https://github.com/seanchatmangpt/clnrm"
description = "A high-level, ergonomic API for building noun-verb CLI patterns on top of clap"
keywords = ["cli", "clap", "noun-verb", "command-line", "typer"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "clap_noun_verb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "services"
path = "examples/services.rs"

[[example]]
name = "collector"
path = "examples/collector.rs"
