[package]
name = "clnrm-ai"
version = "0.4.0"
edition = "2021"
description = "AI and Autonomic Intelligence features for Cleanroom Testing Framework"
license = "MIT"
repository = "https://github.com/seanchatmangpt/clnrm"

[dependencies]
clnrm-core = { path = "../clnrm-core", version = "0.4.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
rand = "0.8"
surrealdb = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "clnrm_ai"
path = "src/lib.rs"
