[package]
name = "clnrm-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cleanroom Testing Framework - Shared utilities"

[lib]
name = "clnrm_shared"
path = "src/lib.rs"
test = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = "2.0"
